--- a/HTML_CSS/stylesheets.css
+++ b/HTML_CSS/stylesheets.css
@@ -9,6 +9,11 @@ body {
     height: fit-content;
 }
 
+a, a:visited {
+    text-decoration: none;
+    color: black;
+}
+
 .container {
     width: 100%;
     margin: auto;
@@ -64,13 +69,17 @@ body {
     align-items: end;
 }
 
+.header-buttons li:hover{
+    background-color: bisque;
+}
+
 
 .section-content {
     background-color: #FEFAE0;
     width: fit-content;
     height: fit-content;
     padding-top: 10%;
-    padding-bottom: 90%;
+    padding-bottom: 20%;
     align-items: center;
     text-align: center;
 }
@@ -79,8 +88,7 @@ body {
     background-color: #FEFAE0;
     width: 100%;
     height: fit-content;
-    padding-top: 10%;
-    padding-bottom: 90%;
+    padding-bottom: 20%;
     align-items: center;
     text-align: center;
 }
@@ -103,32 +111,39 @@ body {
     background-color: #FEFAE0;
     width: 100%;
     height: fit-content;
-    padding-bottom: 30%;
+    padding-bottom: 5%;
     align-items: center;
     text-align: center;
 }
 
 .product-2 img{
-    justify-content: center;
-    margin: 0 auto;
-    width: 15rem;
-    flex-shrink: 3;
+    width: 90%;
+    max-width: 20rem;
+}
+
+.product-2 figcaption{
+    text-align: left;
+    padding: 0 5% 1% 5%;
+    color: grey;
 }
 
 .product-2 p{
     padding: 0 5% 0 5%;
     width: fit-content;
+    text-align: left;
 }
 
 .product-2 ul{
-    width: fit-content;
+    width: 100%;
     display: flex;
     list-style: none;
     padding: 1rem;
 }
 
 .product-2 li{
-    padding: 3rem
+    margin: 1rem;
+    padding: 0.5rem;
+    background-color: #FAEDCD;
 }
 
 .section-content h1{
@@ -147,4 +162,61 @@ body {
     margin: 0 auto;
     width: 90%;
     padding: 0 5% 0 5%;
+}
+
+
+.contact {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #FEFAE0;
+    width: 100%;
+    height: fit-content;
+    padding-bottom: 5%;
+    align-items: center;
+    text-align: center;
+}
+
+.contact p{
+    padding: 0 10% 0 5%;
+    width: fit-content;
+    text-align: left;
+}
+
+.contact ul{
+    width: 100%;
+    display: flex;
+    list-style: none;
+    padding: 6rem;
+    padding-bottom: 5%;
+    padding-top: 2%;
+}
+
+.contact li{
+    margin: 1rem;
+    padding: 0.5rem;
+}
+
+.contact iframe{
+    width: 30rem;
+    height: 30rem;
+    padding: 2rem;
+}
+
+
+.contact-container{
+    width: auto;
+    margin: auto;
+    background-color: #CCD5AE;
+    box-sizing: border-box;
+    padding: 0 15% 0 15%;
+    align-items: center;
+}
+
+.contact-section{
+    background-color: #FEFAE0;
+    width: auto;
+    height: fit-content;
+    padding-bottom: 20%;
+    align-items: center;
+    text-align: center;
 }
