--- a/HTML_CSS/stylesheets.css
+++ b/HTML_CSS/stylesheets.css
@@ -119,16 +119,17 @@ a, a:visited {
 .product-2 img{
     width: 90%;
     max-width: 20rem;
+    padding-bottom: 1rem;
 }
 
 .product-2 figcaption{
-    text-align: left;
-    padding: 0 5% 1% 5%;
+    text-align: center;
+    padding: 0 2rem 1% 2rem;
     color: grey;
 }
 
 .product-2 p{
-    padding: 0 5% 0 5%;
+    padding: 0 2rem 0 2rem;
     width: fit-content;
     text-align: left;
 }
@@ -197,15 +198,15 @@ a, a:visited {
 }
 
 .contact iframe{
-    width: 30rem;
-    height: 30rem;
-    padding: 2rem;
+    min-width: 30rem;
+    min-height: 30rem;
+    padding: 4rem;
 }
 
 
 .contact-container{
-    width: auto;
-    margin: auto;
+    width: 100%;
+    margin: 0 2rem 0 2rem;
     background-color: #CCD5AE;
     box-sizing: border-box;
     padding: 0 15% 0 15%;
